# kaggle_template

./: .env.sample  Makefile  README.md  compose.yaml  cookiecutter.json  setup.py
.devcontainer/: devcontainer.json
docker/: Dockerfile.cpu  Dockerfile.gpu
exp/: dataset-metadata.json
sub/: kernel-metadata.json
{{cookiecutter.project_slug}}/: .gitignore  README.md  compose.yaml  pyproject.toml
{{cookiecutter.project_slug}}/docker/: Dockerfile.cpu  Dockerfile.gpu
{{cookiecutter.project_slug}}/experiments/001/: config.py  metric.py  run_template.ipynb
{{cookiecutter.project_slug}}/scripts/: download_competition.sh  push_experiment.sh
{{cookiecutter.project_slug}}/src/: upload.py
{{cookiecutter.project_slug}}/src/kaggle_utils/: customhub.py
